--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -24,10 +24,10 @@
         </Grid.RowDefinitions>
         <!--Header-->
         <!--Menu-->
-        <Menu VerticalContentAlignment="Center" VerticalAlignment="Center" Height="20">
+        <Menu VerticalContentAlignment="Center" VerticalAlignment="Center">
             <MenuItem Header="File" VerticalAlignment="Center">
                 <!--Создать новый документ.-->
-                <MenuItem x:Name="NewDocumentMenuItem" Header="New" 
+                <MenuItem x:Name="NewDocumentMenuItem" Header="New"
                           Command="ApplicationCommands.New" />
                 <!--Открыть существующий.-->
                 <MenuItem x:Name="OpenMenuItem" Header="Open" InputGestureText="CTRL+O"
@@ -49,9 +49,6 @@
                 <!--Удалить.-->
                 <MenuItem x:Name="DeleteMenuItem" Header="Delete" InputGestureText="Del" />
             </MenuItem>
-            <!--<ToggleButton Command="EditingCommands.ToggleBold" Name="btnBold">
-                <Image Source="Images/bold-button-of-letter-b-symbol.png" />
-            </ToggleButton>-->
             <DockPanel>
                 <ToolBar DockPanel.Dock="Top">
                     <ToggleButton Command="EditingCommands.ToggleBold" Name="btnBold">
@@ -59,20 +56,20 @@
                     </ToggleButton>
                     <Separator />
                     <ComboBox Name="cmbFontFamily" Width="150" SelectionChanged="cmbFontFamily_SelectionChanged" />
-                    <ComboBox Name="cmbFontSize" Width="50" IsEditable="True" TextBoxBase.TextChanged="cmbFontSize_TextChanged" />
+                    <ComboBox Name="cmbFontSize" Width="50" IsEditable="True"
+                              TextBoxBase.TextChanged="cmbFontSize_TextChanged" />
                 </ToolBar>
-                <RichTextBox Name="rtbEditor" SelectionChanged="rtbEditor_SelectionChanged" />
             </DockPanel>
         </Menu>
-
         <!--Body-->
         <Rectangle Grid.Row="1" />
-        <RichTextBox x:Name="TextEditor"
+        <RichTextBox Name="TextEditor"
+                     SelectionChanged="TextEditor_SelectionChanged"
                      Grid.Row="1"
                      Background="Transparent"
                      BorderThickness="0" Padding="20" FontSize="16"
                      FontFamily="Lucida Console"
-                     CaretBrush="White"
+                     CaretBrush="Black"
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto" />
     </Grid>
