--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Untitled - Notepad" Height="720" Width="1024">
+        Title="Untitled - Notepad" Height="720" Width="1024" MinWidth="500" MinHeight="500" FontSize="16">
 
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.New" Executed="New_Executed" />
@@ -16,7 +16,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <!--Header-->
-            <RowDefinition Height="20" />
+            <RowDefinition Height="22" />
             <!--Body-->
             <RowDefinition />
             <!--Footer-->
@@ -24,10 +24,13 @@
         </Grid.RowDefinitions>
         <!--Header-->
         <!--Menu-->
-        <Menu VerticalContentAlignment="Center" VerticalAlignment="Center">
-            <MenuItem Header="File" VerticalAlignment="Center">
+        <Menu VerticalContentAlignment="Center" VerticalAlignment="Center" Height="24">
+            <Menu.BitmapEffect>
+                <DropShadowBitmapEffect />
+            </Menu.BitmapEffect>
+            <MenuItem Header="File" VerticalAlignment="Center" FontSize="16">
                 <!--Создать новый документ.-->
-                <MenuItem x:Name="NewDocumentMenuItem" Header="New"
+                <MenuItem x:Name="NewDocumentMenuItem" Header="New" 
                           Command="ApplicationCommands.New" />
                 <!--Открыть существующий.-->
                 <MenuItem x:Name="OpenMenuItem" Header="Open" InputGestureText="CTRL+O"
@@ -39,7 +42,7 @@
                 <MenuItem x:Name="SaveAsMenuItem" Header="Save As"
                           Command="ApplicationCommands.SaveAs" />
             </MenuItem>
-            <MenuItem Header="Edit">
+            <MenuItem Header="Edit" FontSize="16">
                 <!--Копировать.-->
                 <MenuItem x:Name="CopyMenuItem" Header="Copy" InputGestureText="CTRL+C" />
                 <!--Вырезать.-->
@@ -51,8 +54,12 @@
             </MenuItem>
             <DockPanel>
                 <ToolBar DockPanel.Dock="Top">
-                    <ToggleButton Command="EditingCommands.ToggleBold" Name="btnBold">
+                    <ToggleButton Command="EditingCommands.ToggleBold" 
+                                  Name="btnBold">
                         <Image Source="Images/bold-button-of-letter-b-symbol.png" />
+                        <ToggleButton.ToolTip>
+                            <ToolTip>Make text bold</ToolTip>
+                        </ToggleButton.ToolTip>
                     </ToggleButton>
                     <Separator />
                     <ComboBox Name="cmbFontFamily" Width="150" SelectionChanged="cmbFontFamily_SelectionChanged" />
@@ -64,7 +71,6 @@
         <!--Body-->
         <Rectangle Grid.Row="1" />
         <RichTextBox Name="TextEditor"
-                     SelectionChanged="TextEditor_SelectionChanged"
                      Grid.Row="1"
                      Background="Transparent"
                      BorderThickness="0" Padding="20" FontSize="16"
