--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -13,10 +13,11 @@
     </Window.Resources>
 
     <Window.CommandBindings>
-        <CommandBinding Command="ApplicationCommands.New" Executed="New_Executed" />
+        <CommandBinding Command="New" Executed="New_Executed" />
         <CommandBinding Command="ApplicationCommands.Open" Executed="Open_Executed" />
         <CommandBinding Command="ApplicationCommands.Save" Executed="Save_Executed" />
         <CommandBinding Command="ApplicationCommands.SaveAs" Executed="SaveAs_Executed" />
+        <CommandBinding Command="Copy" />
     </Window.CommandBindings>
 
     <Grid>
@@ -34,7 +35,7 @@
             <MenuItem Header="File" VerticalAlignment="Center" FontSize="16">
                 <!--Создать новый документ.-->
                 <MenuItem Name="NewDocumentMenuItem" Header="New"
-                          Command="ApplicationCommands.New" />
+                          Command="New" />
                 <!--Открыть существующий.-->
                 <MenuItem Name="OpenMenuItem" Header="Open" InputGestureText="CTRL+O"
                           Command="ApplicationCommands.Open" />
@@ -47,7 +48,7 @@
             </MenuItem>
             <MenuItem Header="Edit" FontSize="16">
                 <!--Копировать.-->
-                <MenuItem Name="CopyMenuItem" Header="Copy" InputGestureText="CTRL+C" />
+                <MenuItem Name="CopyMenuItem" Header="Copy" InputGestureText="CTRL+C" Command="Copy" />
                 <!--Вырезать.-->
                 <MenuItem Name="CutMenuItem" Header="Cut" InputGestureText="CTRL+X" />
                 <!--Вставить.-->
